--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,21 +34,8 @@
 		</div>
 		</div>
 		</div>
-		<div id="weightDisplay" class="text-center row my-5">
-		<!-- Display weight here -->
-		</div>
-		<div class="row">
-		<div class="col">
-		<div class="row p-4">
-		<button class="btn btn-lg btn-success text-center" onclick="weighButtonClicked()">Punnitse</button>
-		</div>
-		</div>
-		<div class="col">
-		<div class="row p-4">
-		<button class="btn btn-lg btn-danger text-center" onclick="resetButtonClicked()">Nollaa</button>
-		</div>
-		</div>
-		</div>
+    <div id="app"></div>
+		
 		</div>
 		<!-- Bootstrap JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
