--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,20 +22,21 @@
 	</head>
 	<body>
 		<div class="container" style="border: 1px solid black; max-width: 800px;">
-		<div class="row">
-		<div class="col">
-		<div class="row">
-			<button class="btn"><a href="/">Punnitus</a></button>
-		</div>
-		</div>
-		<div class="col">
-		<div class="row">
-			<button class="btn btn-secondary"><a href="/history">Punnitushistoria</a></button>
-		</div>
-		</div>
-		</div>
-    <div id="app"></div>
-		
+		  <div class="row">
+        <div class="col">
+          <div class="row">
+            <button class="btn"><a href="/">Punnitus</a></button>
+          </div>
+        </div>
+		    <div class="col">
+		      <div class="row">
+			      <button class="btn btn-secondary"><a href="/history">Punnitushistoria</a></button>
+		      </div>
+		    </div>
+		  </div>
+      <div id="app">
+        <!-- Weighing App is rendered here -->
+      </div>
 		</div>
 		<!-- Bootstrap JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
